Fix homepage overflow on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -174,7 +174,7 @@ a:hover {
     font-family: Termina, sans-serif;
     font-weight: 700;
     font-style: normal;
-    font-size: 54px;
+    font-size: 50px;
     line-height: 1;
     margin-top: 20px;
     margin-bottom: 20px;
